# RentCarz

./: db.sqlite3  manage.py  pyproject.toml
backend/booking/: models.py  serializers.py  urls.py  views.py
backend/booking/migrations/: 0001_initial.py
backend/car/: admin.py  models.py  urls.py
backend/car/migrations/: 0001_initial.py  0002_alter_caravailability_options_and_more.py  0004_alter_caravailability_options.py
backend/rentcarz/: urls.py  wsgi.py
backend/user/: serializers.py
backend/user/migrations/: 0001_initial.py  0002_alter_profile_phone_number.py
booking/: models.py  serializers.py  views.py
car/: models.py  serializers.py  views.py
car/migrations/: 0001_initial.py  0002_alter_car_id.py  0003_alter_car_id.py  0003_alter_caravailability_options.py  0004_caravailability.py  0005_alter_caravailability_date.py  0005_alter_caravailability_unique_together.py
carowner/: models.py  urls.py  views.py
carowner/migrations/: 0001_initial.py
carowner/templates/: hello.html
frontend/: package-lock.json
rentcarz/: asgi.py  settings.py  urls.py
user/: apps.py  models.py  serializers.py  views.py
user/migrations/: 0003_remove_profile_role_alter_profile_phone_number.py
